@@ -5,7 +5,7 @@
     <groupId>com.collarmc</groupId>
     <artifactId>pounce</artifactId>
     <packaging>jar</packaging>
-    <version>17.0-SNAPSHOT</version>
+    <version>19.0-SNAPSHOT</version>
 
     <scm>
         <connection>scm:git:git@github.com:collarmc/pounce.git</connection>
@@ -13,7 +13,7 @@
     </scm>
 
     <properties>
-        <java.version>17</java.version>
+        <java.version>19</java.version>
         <maven.javadoc.skip>true</maven.javadoc.skip>
     </properties>
 
@@ -38,23 +38,27 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <target>${java.version}</target>
-                    <source>${java.version}</source>
+                    <target>19</target>
+                    <source>19</source>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>com.github.spotbugs</groupId>
-                <artifactId>spotbugs-maven-plugin</artifactId>
-                <version>4.2.2</version>
-                <executions>
-                    <execution>
-                        <id>spot-bugs</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                    </execution>
-                </executions>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M9</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.surefire</groupId>
+                        <artifactId>surefire-junit47</artifactId>
+                        <version>3.0.0-M9</version>
+                    </dependency>
+                </dependencies>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
